--- a/FAQS_laboratori_FP.tex
+++ b/FAQS_laboratori_FP.tex
@@ -161,11 +161,11 @@ La lectura de les FAQS no cal realitzar-la seqüencialment: cada apartat
 respon a una consulta o conjunt de consultes, sense relació necessària
 entre ells.
 
-El fil conductor són les \textbf{PAC}\footnote{Prova d'Avaluació
-  Continua} : les diferents respostes donades al \textbf{Laboratori de
-Fonaments de Programació} s'han agrupat en PAC segons el moment en que
-es van produïr. Això no significa que una resposta d'una PAC anterior o
-posterior a la que estiguem tractant, no ens pugui ser d'utilitat.
+El fil conductor són les \textbf{PAC} : les diferents respostes donades
+al \textbf{Laboratori de Fonaments de Programació} s'han agrupat en PAC
+segons el moment en que es van produïr. Això no significa que una
+resposta d'una PAC anterior o posterior a la que estiguem tractant, no
+ens pugui ser d'utilitat.
 
 Donada aquesta independència de contingut és recomanable utilitzar el
 cercador del portal: per exemple, si volem cercar consultes on s'hagi
