--- a/FAQS_laboratori_FP.tex
+++ b/FAQS_laboratori_FP.tex
@@ -26,7 +26,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={FAQ Laboratori de Fonaments de Programació},
+            pdftitle={FAQS Laboratori de Fonaments de Programació},
             pdfauthor={Jordi Blasco Planesas},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -119,7 +119,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{FAQ Laboratori de Fonaments de Programació}
+  \title{FAQS Laboratori de Fonaments de Programació}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Jordi Blasco Planesas}
@@ -127,7 +127,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2020-02-24}
+    \date{2020-02-19}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -152,14 +152,14 @@ El present recurs és un recopilatori de qüestions plantejades al
 \textbf{Laboratori de Fonaments de Programació} durant els últims
 semestres.
 
-Les \textbf{FAQ} poden donar resposta a dubtes i errors habituals en el
+Les \textbf{FAQS} poden donar resposta a dubtes i errors habituals en el
 moment d'iniciar-nos en el món de la programació. També es poden
 utilitzar com a material complementari a la teoria explicada a la
 \textbf{xWiki} de \textbf{Fonaments de Programació}.
 
-La lectura de les FAQ no cal realitzar-la seqüencialment: cada apartat
+La lectura de les FAQS no cal realitzar-la seqüencialment: cada apartat
 respon a una consulta o conjunt de consultes, sense relació necessària
-entre elles.
+entre ells.
 
 El fil conductor són les \textbf{PAC} : les diferents respostes donades
 al \textbf{Laboratori de Fonaments de Programació} s'han agrupat en PAC
@@ -172,8 +172,8 @@ cercador del portal: per exemple, si volem cercar consultes on s'hagi
 tractat \texttt{strlen}, simplement posem aquesta comanda al cercador i
 obtindrem la relació d'entrades que la contenen.
 
-És possible descarregar una versió en PDF/EPUB de totes les FAQ, des del
-botó de descàrrega de la part superior.
+És possible descarregar una versió en PDF/EPUB de totes les FAQS, des
+del botó de descàrrega de la part superior.
 
 La documentació utilitza les següents icones per referenciar els blocs:
 
@@ -438,7 +438,7 @@ variable. Per obtenir el seu valor cal eliminar de dins
 \NormalTok{    printf(}\StringTok{"Introdueix l'identificador d'avió : "}\NormalTok{);}
 \NormalTok{    scanf(}\StringTok{"%d"}\NormalTok{, &idAvio);}
     
-\NormalTok{    printf(}\StringTok{">> Has escollit l'avió amb id %d }\SpecialCharTok{\textbackslash{}n}\StringTok{"}\NormalTok{, idAvio);}
+\NormalTok{    printf(}\StringTok{">> Has escollit l'avió amb id %d }\SpecialCharTok{\textbackslash{}n}\StringTok{"}\NormalTok{, &idAvio);}
 
     \ControlFlowTok{return} \DecValTok{0}\NormalTok{;}
 \NormalTok{\}}
