correcció errata nou exemple PAC04

--- a/FAQ_Laboratori_FP.tex
+++ b/FAQ_Laboratori_FP.tex
@@ -2731,7 +2731,7 @@ algorithm mitjanaPes
             que en la següent iteració del bucle, es continuï intentant afegir el valor llegit dins
             de la posició 'i' del bucle }
 
-        end fi
+        end if
 
         { En aquest punt tenim el vectorPesos que té 7 (=NUM_DIES) pesos vàlids }
 
