correció errata PAC01 Com utilitzar un enumeratiu

--- a/FAQ_Laboratori_FP.tex
+++ b/FAQ_Laboratori_FP.tex
@@ -127,7 +127,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2020-03-26}
+    \date{2020-03-27}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -523,7 +523,7 @@ en llenguatge C seria:
 \NormalTok{   tGender gender;}
 
 \NormalTok{   printf(}\StringTok{"Type patient gender: 0 for MALE, 1 for FEMALE}\SpecialCharTok{\textbackslash{}n}\StringTok{"}\NormalTok{);}
-\NormalTok{   scanf(}\StringTok{"%d"}\NormalTok{, &gender);}
+\NormalTok{   scanf(}\StringTok{"%u"}\NormalTok{, &gender);}
 
    \ControlFlowTok{if}\NormalTok{ (gender == MALE) \{}
 \NormalTok{      printf(}\StringTok{"Patient gender MALE}\SpecialCharTok{\textbackslash{}n}\StringTok{"}\NormalTok{);}
